--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,24 +1,23 @@
 name: DevOps Lab Exercise
 run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+
 # Control when workflow will run
 on:
- push:
+  push:
     branches: ["main"]
-# Trigger the workflow on push or pull requests events but only for the main branch
   pull_request:
     branches: ["main"]
 
 jobs:
-    build:
+  build:
+    runs-on: ubuntu-latest
 
-        runs-on: ubuntu-latest
-
-        steps:
-          - uses: action/checkout@v4
-          - name: Use Node.js
-            uses: action/setup-node@v3
-            with:
-                node-version: '20.x'
-          # - run: npm ci
-          - run: npm run build --if-present
-          - run: npm test
+    steps:
+      - uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.x'
+      # - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
