--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "COMP 3104 SPA deployment",
   "version": "0.1.0",
-   "homepage": "https://Noah-626.github.io/COMP3104",
+  "homepage": "https://Noah-626.github.io/COMP3104",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
